Update and rename STORY1.html to mystory.html

--- a/story/mystory.html
+++ b/story/mystory.html
@@ -135,7 +135,7 @@
 </script>
 </head>
 <body>
-<h1>DIVINE ODYSSEY: A PILGRIMAGE FROM AYODHYA TO AMBAJI </h1>
+<h1>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</h1>
 <h2>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h2>
 <h2>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h2>
 <h2>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h2>
