--- a/story/mystory.html
+++ b/story/mystory.html
@@ -14,7 +14,7 @@
         margin: 0;
         padding: 0;
     }
-    h1{ color:Red;
+    h1{ color:#5A5A5A;
         font-size:38px;
         text-align:center;
         Font-family:Sans Serif;
