--- a/story/mystory.html
+++ b/story/mystory.html
@@ -20,8 +20,8 @@
         Font-family:Sans Serif;
             }
     h2{
-        color:Blue;
-		font-size:32px;
+        color:Brown;
+	font-size:32px;
         text-align:left;
         font-size:Medium;
         Font-family:Sans Serif;
