--- a/story/mystory.html
+++ b/story/mystory.html
@@ -27,12 +27,6 @@
         Font-family:Sans Serif;
 		margin-left:5%;
     }
-    p{
-        color:Black;
-        Font-family:Sans Serif;
-        Width:60%;
-		letter-spacing:10px;
-    }
 </style>
 <script>   //Source -https://github.com/googlemaps/js-samples/blob/main/samples/advanced-markers-accessibility/index.ts 
     async function initMap() {
@@ -107,7 +101,7 @@
             return marker;
         });
  
-        // Create a polyline to connect the markers.
+        // Create a polyline to connect the markers. Source-  https://developers.google.com/maps/documentation/javascript/examples/polyline-simple
 
        const tourPathCoordinates = [
     { lat:  26.79586, lng: 82.19447 },
