--- a/story/mystory.html
+++ b/story/mystory.html
@@ -2,7 +2,7 @@
 <!-- source: https://developers.google.com/maps/documentation/javascript/overview#maps_map_simple-html -->
 <html>
 <head>
-<title>MY FIRST RELIGIOUS TRIP</title>
+<title>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</title>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <style>
     #map {
