--- a/story/mystory.html
+++ b/story/mystory.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!-- source: https://developers.google.com/maps/documentation/javascript/overview#maps_map_simple-html -->
+<!-- source: https://developers.google.com/maps/documentation/javascript/overview -->
 <html>
 <head>
 <title>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</title>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-<style>
+<style> 
     #map {
-        height: 100%;
+        height: 100%;  /* CSS to style map */
     }
     html,
     body {
-        height: 100%;
+        height: 100%;     /* CSS to style body, h1 and h2 */
         margin: 0;
         padding: 0;
     }
@@ -27,7 +27,7 @@
         Font-family:Sans Serif;
 		margin-left:5%;
     }
-</style>
+</style>    // Java script to add location markers and polyline
 <script>   //Source -https://github.com/googlemaps/js-samples/blob/main/samples/advanced-markers-accessibility/index.ts 
     async function initMap() {
         // Request needed libraries.
