--- a/story/mystory.html
+++ b/story/mystory.html
@@ -14,13 +14,13 @@
         margin: 0;
         padding: 0;
     }
-    h1{ color:#5A5A5A;
+    h1{ color:#008080;
         font-size:38px;
         text-align:center;
         Font-family:Sans Serif;
             }
     h2{
-        color:Brown;
+        color:E6E6FA;
 	font-size:32px;
         text-align:left;
         font-size:Medium;
