--- a/story/mystory.html
+++ b/story/mystory.html
@@ -15,17 +15,25 @@
         padding: 0;
     }
     h1{ color:#008080;
-        font-size:38px;
+        font-size:45px;
         text-align:center;
         Font-family:Sans Serif;
             }
     h2{
-        color:E6E6FA;
-	font-size:32px;
+        color:Black;
+	font-size:39px;
         text-align:left;
         font-size:Medium;
         Font-family:Sans Serif;
-		margin-left:5%;
+	margin-left:5%;
+    }
+  h3{
+        color:E6E6FA;
+	font-size:39px;
+        text-align:left;
+        font-size:Medium;
+        Font-family:Sans Serif;
+	margin-left:5%;
     }
 </style>    
 	
@@ -132,14 +140,15 @@
 </head>
 <body>
 <h1>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</h1>
-<h2>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h2>
-<h2>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h2>
-<h2>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h2>
-<h2>4. Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</h2>
-<h2>5. Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</h2>
-<h2>6. Somnath Jyotirlinga- Somnath, Gujarat, India.</h2>
-<h2>7. Nageshwar Jyotirlinga- Porbandar, Gujarat, India.</h2>
-<h2>8. Ambaji Mata Mandir- Banaskantha, Gujarat, India.</h2>
+<h2>Temples I Visited</h2>
+<h3>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h3>
+<h3>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h3>
+<h3>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h3>
+<h3>4. Mahakaleshwar Jyotirlinga- Ujjain, Madhya Pradesh, India.</h3>
+<h3>5. Omkareshwar Jyotirlinga-Omkareshwar, Madhya Pradesh, India.</h3>
+<h3>6. Somnath Jyotirlinga- Somnath, Gujarat, India.</h3>
+<h3>7. Nageshwar Jyotirlinga- Porbandar, Gujarat, India.</h3>
+<h3>8. Ambaji Mata Mandir- Banaskantha, Gujarat, India.</h3>
     <div id="map"></div>
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE&callback=initMap&v=weekly" async></script>
