--- a/story/mystory.html
+++ b/story/mystory.html
@@ -140,7 +140,7 @@
 </head>
 <body>
 <h1>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</h1>
-<h2>Temples I Visited</h2>
+<h2>*Temples I Visited</h2>
 <h3>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h3>
 <h3>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h3>
 <h3>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h3>
