--- a/story/mystory.html
+++ b/story/mystory.html
@@ -20,7 +20,7 @@
         Font-family:Sans Serif;
             }
     h2{
-        color:Black;
+        color:A9A9A9;
 	font-size:39px;
         text-align:left;
         font-size:Medium;
@@ -28,7 +28,7 @@
 	margin-left:5%;
     }
   h3{
-        color:E6E6FA;
+        color:Black;
 	font-size:39px;
         text-align:left;
         font-size:Medium;
@@ -140,7 +140,7 @@
 </head>
 <body>
 <h1>DIVINE ODYSSEY: A PILGRIMAGE FROM SHRI AYODHYA DHAM TO AMBAJI MATA MANDIR</h1>
-<h2>*Temples I Visited</h2>
+<h2>*TEMPLES I VISITED</h2>
 <h3>1. Shri Ram Janmabhumi Mandir- Ayodhya, Uttar Pradesh, India.</h3>
 <h3>2. Kashi Vishwanath Jyotirlinga- Varanasi, Uttar Pradesh, India.</h3>
 <h3>3. Pitambara Mata Mandir- Datia, Madhya Pradesh, India.</h3>
